--- a/radiance-app/package.json
+++ b/radiance-app/package.json
@@ -15,7 +15,7 @@
     "vue-store": "^0.3.1-moved",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "*"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.12.1",
